added willow tree